--- a/M1.ipynb
+++ b/M1.ipynb
@@ -68,6 +68,7 @@
     "    - README_API - описание документации API\n",
     "    - heart_app_1610.py - основное приложение\n",
     "    - my_trained_pipeline_1610.pkl - обученная модель 3\n",
+    "    - Screen_API_HTML.pdf - визуал калькулятора в html\n",
     "- Документация API доступна по ссылке: http://localhost:8001/docs\n",
     "\n",
     "**Рекомендация для заказчика**\n",
